# AoC2024

./: .gitignore  README.md  project.clj
chez/: binomial-heap.scm  binomial-heaps.scm  day01.scm  day02.scm  day03.scm  day04.scm  day05.scm  day06.scm  day07.scm  day08.scm  day09.scm  day10.scm  day11.scm  day12.scm  day13.scm  day14.scm  day15.scm  day16.scm  day17.scm  day18.scm  day19.scm  deques.scm  grids.scm  parsecomb.scm  radix-maps.scm  radixmaps.scm  run.sh  runner.scm  searches.scm  transducers.scm  util.scm
ocaml/: aoc2024.opam  dune-project
ocaml/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  dune  grid.ml  parsecomb.ml  point.ml  search.ml  util.ml
src/aoc2024/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  day08.clj  day09.clj  day10.clj  day11.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day17.clj  day18.clj  day19.clj  day20.clj  day21.clj  day22.clj  day23.clj  day24.clj  day25.clj  grids.clj  grids_old.clj  parsecomb.clj  searches.clj
